<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/place_picker_toolbar"
  android:layout_width="match_parent"
  android:layout_height="@dimen/mapbox_plugins_extended_toolbar_height"
  tools:background="@color/mapbox_plugins_navy">

  <TextView
    android:id="@+id/place_picker_toolbar_primary_text_view"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/mapbox_plugins_text_left_margin"
    android:layout_marginStart="@dimen/mapbox_plugins_text_left_margin"
    android:text="@string/mapbox_plugins_place_picker_toolbar_primary_text"
    android:textColor="@color/mapbox_plugins_white"
    android:textSize="@dimen/mapbox_plugins_toolbar_primary_text"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/place_picker_toolbar_secondary_text_view"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_chainStyle="packed"/>

  <TextView
    android:id="@+id/place_picker_toolbar_secondary_text_view"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/mapbox_plugins_text_left_margin"
    android:layout_marginStart="@dimen/mapbox_plugins_text_left_margin"
    android:text="@string/mapbox_plugins_place_picker_toolbar_secondary_text"
    android:textColor="@color/mapbox_plugins_white"
    android:textSize="@dimen/mapbox_plugins_toolbar_secondary_text"
    android:textStyle="normal"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/place_picker_toolbar_primary_text_view"/>

  <ImageView
    android:id="@+id/mapbox_place_picker_toolbar_back_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/mapbox_plugins_image_view_left_margin"
    android:layout_marginStart="@dimen/mapbox_plugins_image_view_left_margin"
    android:contentDescription="@string/mapbox_plugins_cd_exit_place_picker"
    android:tint="@color/mapbox_plugins_white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/mapbox_ic_arrow_back"/>

</androidx.constraintlayout.widget.ConstraintLayout>