<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <EditText
    android:id="@+id/edittext_search"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:background="@null"
    android:cursorVisible="true"
    android:ems="10"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:hint="@string/mapbox_plugins_autocomplete_search_hint"
    android:imeOptions="actionSearch|flagNoExtractUi"
    android:inputType="textNoSuggestions"
    android:singleLine="true"
    android:textColor="@color/mapbox_plugins_navy"
    android:textColorHint="@color/mapbox_plugins_light_navy"
    android:textColorLink="@color/mapbox_plugins_navy"
    android:textCursorDrawable="@drawable/mapbox_color_text_cursor"
    android:textSize="16sp"
    android:typeface="sans"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/button_search_clear"
    app:layout_constraintStart_toEndOf="@+id/button_search_back"
    app:layout_constraintTop_toTopOf="parent"/>

  <ImageView
    android:id="@+id/button_search_clear"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:background="@android:color/transparent"
    android:contentDescription="@string/mapbox_plugins_cd_search_clear_button"
    android:focusable="true"
    android:scaleType="center"
    android:tint="@color/mapbox_plugins_navy"
    android:visibility="invisible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    app:srcCompat="@drawable/mapbox_ic_clear"/>

  <ImageView
    android:id="@+id/button_search_back"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:background="@android:color/transparent"
    android:contentDescription="@string/mapbox_plugins_cd_search_back_button"
    android:focusable="true"
    android:paddingEnd="20dp"
    android:paddingLeft="0dp"
    android:paddingRight="20dp"
    android:paddingStart="0dp"
    android:scaleType="center"
    android:tint="@color/mapbox_plugins_navy"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/mapbox_ic_arrow_back"/>
</androidx.constraintlayout.widget.ConstraintLayout>